<resources>
    <string name="app">Agrove</string>
    <string name="sous_app_title">Cultivons notre avenir</string>
    <string name="HARVEST_ESTIMATED">Récolte estimée : </string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">Adresse email</string>
    <string name="ur_email">Entrez votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_votre_mot_de_passe">Confirmation du mot de passe</string>
    <string name="mot_de_passe_oublie"><u>Mot de passe oublié ?</u></string>
    <string name="title_signIn">S\'enregister</string>
    <string name="se_connecter">Se connecter</string>
    <string name="register">CRÉER UN COMPTE</string>
    <string name="valider_mon_inscription">CRÉER</string>
    <string name="TITLE_CHANGE_PASSWORD">Mot de passe oublié?</string>
    <string name="NEW_PASSWORD">Nouveau (8 caract. min.)</string>
    <string name="not_activated">Compte non activé</string>
    <string name="name_of_garden">Nom de votre potager</string>
    <string name="rename_of_garden">Renommez votre potager</string>
    <string name="how_create_potager">Création de votre potager en cours ...</string>
    <string name="how_create_potager_finish">Vous pouvez dorénavant passer aux étape\nsuivantes afin de le paramétrer..</string>
    <string name="DAYS">jours</string>
    <string name="SOME_DAYS">jours restant avant la récolte.</string>
    <string name="STATE_LEVEL_3">Mauvais</string>
    <string name="STATE_LEVEL_2">Moyen</string>
    <string name="STATE_LEVEL_1">Bon</string>
    <string name="STATE_FINISH">Terminé</string>
    <string name="STATE_PUBLIC">Accessibilité du potager</string>
    <string name="STATE_PUBLIC_ON">Voulez-vous vraiment rendre\nle potager publique ?</string>
    <string name="STATE_PUBLIC_OFF">Voulez-vous vraiment rendre\nle potager privée ?</string>
    <string name="QRCODE_ISEMPTY">Aucune donnée reçu pour le qrCode</string>
    <string name="QRCODE">Qr code error</string>
    <string name="zipCode">Code postal</string>
    <string name="ERROR_API_ZIP">Le code postal ne correspond pas avec le pays selectionné !</string>
    <string name="check_internet">Vérifiez votre connexion internet</string>
    <string name="fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="fill_do_not_empty">Le champ ne doit pas être vide</string>
    <string name="cgu_alert">Vous devez accepter notre politique de confidentialité</string>
    <string name="FILL_EMAIL">Veuillez entrer votre email</string>
    <string name="EMAIL_DIFFER">Le mail n\'existe pas</string>
    <string name="INVALID_EMAIL">Adresse mail non valide</string>
    <string name="EMAIL_ALREADY_USE">Cette adresse e-mail est déjà utilisée</string>
    <string name="different_password">Les mots de passe ne correspondent pas</string>
    <string name="WEAK_PASSWORD">Le mot de passe entré est invalide, il doit contenir au moins 6 caractères</string>
    <string name="EIGHT_LETTERS">Votre mot de passe doit contenir au moins 8 caractères</string>
    <string name="WRONG_EMAIL_OR_PASSWORD">Email ou mot de passe incorrect</string>
    <string name="wrong_credentials">Utilisateur ou mot de passe incorrect</string>
    <string name="MODIF_SUCCESS">Modification effectuée !</string>
    <string name="MODIF_FAILED">Modification échouée !</string>
    <string name="LOGIN_SUCCESSFUL">Connexion réussie</string>
    <string name="SUBSCRIBE_ERROR1">Vous avez déjà ce potager dans votre liste.</string>
    <string name="SUBSCRIBE_ERROR2">Vous ne pouvez pas créer de potager dans vos abonnements !</string>
    <string name="SUBSCRIBE_ERROR3">Le potager à bien été ajoutée !</string>
    <string name="SUBSCRIBE_ERROR4">Il y a eu une erreur avec la potager !</string>
    <string name="SUBSCRIBE_ERROR5">Votre abonnement à était supprimé</string>
    <string name="SUBSCRIBE_ERROR6">Il y a eu une erreur lors de la suppression de l\'abonnement</string>
    <string name="ALREADY_SUBSCRIBE">Vous êtes déjà abonnée à ce potager.</string>
    <string name="ERROR">Un problème est survenue !</string>
    <string name="ADDRESS_NOT_FOUND">Votre adresse est introuvable !</string>
    <string name="GPS_NOT_FOUND">La localisation de votre position est introuvable !</string>
    <string name="SUCCESS_SEMIS_ADD">La plante à bien été ajouté pour le semis !</string>
    <string name="ECHEC_PLANT_ADD">La plante n\'a pas pu être ajouté !</string>
    <string name="SUCCESS_PLANTING_ADD">La plante à bien été ajouté pour être planté !</string>
    <string name="DELETE_PLANT">La plante à bien était supprimée</string>
    <string name="ECHEC_DELETE_PLANT">Il y a eu un problème lors de la suppression</string>
    <string name="alerter_need_network">Vous devez être connecté à internet !</string>
    <string name="NOTIF_TITLE_TASK">Tâche Éffectuée</string>
    <string name="TASK_DATE_NAME">Fait par</string>
    <string name="TASK_DATE_DATE">Réalisée le</string>
    <string name="LEGEND_PLANT">La plante : </string>
    <string name="LEGEND_MISSION_NAME">La mission : </string>
    <string name="LEGEND_MISSION_BY_NAME">a été éffectuée par</string>
    <string name="LEGEND_MISSION_ON_PLANT">sur la plante</string>
    <string name="LEGEND_MISSION_GARDEN">du potager</string>
    <string name="LEGEND_NUISIBLE_NAME">Nuisible : </string>
    <string name="LEGEND_TOOLS">Outils</string>
    <string name="LEGEND_INTIME">Durée</string>
    <string name="LEGEND_PRIORITY">Importance</string>
    <string name="LEGEND_HOWTODO">Comment faire ?</string>
    <string name="LEGEND_SOINS">LES SOINS</string>
    <string name="TASK_ATM">Missions à réaliser en ce moment.</string>
    <string name="NOT_TASK_TODAY">Il n\'y a pas de mission à réaliser</string>
    <string name="TASK_WEEK">Il n\'y a pas de missions à réaliser cette semaine.</string>
    <string name="PLACE_ONE">Emplacement 1</string>
    <string name="PLACE_TWO">Emplacement 2</string>
    <string name="PLACE_THREE">Emplacement 3</string>
    <string name="PLACE_FOURTH">Emplacement 4</string>
    <string name="SEMIS_OR_PLANT">À semer où à planter</string>
    <string name="SEMIS_OR_PLANTPopup">À semer où à planter</string>
    <string name="SEMIS">À semer</string>
    <string name="PLANT">À planter</string>
    <string name="wishlist_sow">Semez !</string>
    <string name="wishlist_plant">Plantez !</string>
    <string name="less_month">moins d\'un mois !</string>
    <string name="NONE_TASKS">Bravo ! Vous êtes à jour de toutes vos missions !</string>
    <string name="NONE_PLANT_NONE_TASK">Ajoutez une plante pour accéder à vos premières missions.</string>
    <string name="CONFIRM_AFTER_DATE">Pour valider vous devez sélectionner une date."</string>
    <string name="SUCCESS_SHARE">Le lien à bien été partagé ! </string>
    <string name="CONFIRM_ONE">Souhaitez vous vraiment enlever</string>
    <string name="CONFIRM_TWO">de la gestion de l\'équipe ?</string>
    <string name="ARE_U_FINISH_TASK">Avez-vous bien réalisé la mission</string>
    <string name="PLACE_ALREADY_USE">L\'emplacement est déjà utilisée par</string>
    <string name="QUESTION_SEMIS_OR_PLANT">Voulez-vous semer où \nplanter votre</string>
    <string name="QUESTION_SEMIS">Voulez-vous ajouter votre plante ?</string>
    <string name="QUESTION_PLANTING">Voulez-vous planter votre plante ?</string>
    <string name="PLANT_ADD">a bien été ajoutée !</string>
    <string name="alerter_not_slot">Zut ! cet emplacement est déjà occupé par</string>
    <string name="alerter_qr_code_error">Erreur avec le qrCode</string>
    <string name="alerter_geoloc_location_fail">La localisation de votre position est introuvable !</string>
    <string name="alerter_address_not_found">Votre adresse est introuvable !</string>
    <string name="alerter_password_different">Attention les mot de passes sont identiques !</string>
    <string name="alerter_old_password_not_good">L\'ancien mot de passe n\'est pas le bon</string>
    <string name="SCAN_QRCODE">Scanner le potager</string>
    <string name="partager_jardinière">PARTAGER</string>
    <string name="name_gardener">Nom</string>
    <string name="adress_gardener">Adresse</string>
    <string name="city_gardener">Ville</string>
    <string name="pays_gardener">Pays</string>
    <string name="SELECT_DIALOG">Je préfère...</string>
    <string name="TAKE_IN_GALERY">Choisir dans ma galerie</string>
    <string name="TAKE_PICTURE">Prendre une photo</string>
    <string name="leave_it_potager">retirer ce potager</string>
    <string name="remove_from_ur_list">a bien été retiré de votre liste</string>
    <string name="SUCCESS_DELETE">à bien été supprimé !</string>
    <string name="config_ur_garden">Configurez votre potager !</string>
    <string name="tv_trad_util_1">Votre</string>
    <string name="SENDMAIL_CONFIRM">Un e-mail de confirmation vous a été envoyé !</string>
    <string name="SENDMAIL_ERROR">Il y a eu un problème lors de l\'envoie de l\'email ! </string>
    <string name="CANCEL">Annuler</string>
    <string name="add_trad_10">Ou souhaitez-vous</string>
    <string name="add_trad_11">Votre</string>
    <string name="CONFIRM">Valider</string>
    <string name="CONFIRM_2">Confirmer</string>
    <string name="tv_state_seche">Trop sèche</string>
    <string name="tv_state_seche_small">Sèche</string>
    <string name="tv_state_humid_m">Légèrement humide</string>
    <string name="tv_state_humid">Humide</string>
    <string name="tv_state_humid_p">Parfaitement humide</string>
    <string name="tv_state_too_humid">Trop humide</string>
    <string name="MANAGE_TEAM_LEGEND">Ici, je réponds aux personnes qui\naimeraient rejoindre mon équipe</string>
    <string name="En_savoir_plus">En savoir plus</string>
    <string name="delete">Supprimer</string>
    <string name="tv_all_plants">Toute les plantes</string>
    <string name="tv_exit">SORTIR</string>
    <string name="tv_select">Sélectionner</string>
    <string name="tv_realize_task">Réalisation d\'une mission</string>
    <string name="tv_not_finish_task">Non pas encore !</string>
    <string name="already_seed">Je l\'ai déjà semer</string>
    <string name="already_plant">Je l\'ai déjà planter</string>
    <string name="already_add_wish">Ajouter à ma liste d\'envie</string>
    <string name="patient_popup">Un peu de patience !</string>
    <string name="plant_add_trad">Vous pourrez planter\nvotre</string>
    <string name="plant_add_trad_6">Vous pourrez planter</string>
    <string name="plant_add_trad_2">d\'ici</string>
    <string name="plant_add_trad_3">mois</string>
    <string name="plant_add_trad_4">Vous pourrez semer\nvotre</string>
    <string name="alerter_add_plant_wishlist">Ajout de la plante réussie à l\'etage</string>
    <string name="tv_reset_password">Nous avons juste besoin de votre adresse email pour vous envoyer les instructions de réinitialisation de mot de passe</string>
    <string name="days_one">L</string>
    <string name="days_two">M</string>
    <string name="days_three">M</string>
    <string name="days_fourth">J</string>
    <string name="days_five">V</string>
    <string name="days_six">S</string>
    <string name="days_seven">D</string>
    <string name="start_scan">Démarrer le scan</string>
    <string name="scan_setting">Vous pouvez configurer ci-dessous les conditions de l\'appareil à scanner, qui peut être vide.</string>
    <string name="setting_name">Saisissez le nom de diffusion du périphérique Bluetooth, séparé par une virgule entre plusieurs</string>
    <string name="setting_mac">Entrez l\'adresse mac du dispositif Bluetooth</string>
    <string name="setting_uuid">Saisissez l\'UUID du périphérique Bluetooth, séparé par une virgule entre plusieurs</string>
    <string name="autoconnect">AutoConnect ?</string>
    <string name="tv_mission_legend_consult">SELECTIONNER UNE DATE POUR CONSULTER\nVOS ANCIENNES OU VOS FUTUR MISSIONS.</string>
</resources>