<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_plantr"
    android:backgroundTint="@color/white_plantr"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/green_plantr"
        android:backgroundTint="@color/green_plantr"
        android:layout_height="70dp">

    <ImageView
        android:id="@+id/iv_back_ble"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingLeft="24dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="Bluetooth"
            android:textColor="@color/white_plantr"
            android:textSize="21sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_back_ble"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#eeeeee"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/scan_setting"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_mac"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_uuid"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="13sp" />

        <Switch
            android:id="@+id/sw_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/autoconnect"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:background="#eeeeee"
        android:padding="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_scan"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white_plantr"
            android:textColorHighlight="#68DDA4"
            app:backgroundTint="@color/green_plantr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_loading"
            android:visibility="invisible" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:scrollbars="none" />


</LinearLayout>

