<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/extra_extra_grey_plantr"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/exOneAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_plantr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="10sp"
                android:layout_marginBottom="15dp"
                android:text="@string/tv_mission_legend_consult"
                android:letterSpacing="0.1"/>


            <TextView
                android:id="@+id/exOneMonthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white_plantr"
                android:textSize="38sp"
                tools:text="Novembre" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_calendar"
            android:layout_width="match_parent"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendarCurrentDate">

        <LinearLayout
            android:id="@+id/legendLayout"
            android:layout_width="0dp"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/legendText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_one"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_two"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_three"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_fourth"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_five"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_six"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/legendText7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/days_seven"
                android:textColor="@color/white_plantr"
                android:textSize="14sp" />

        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent">

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/exOneCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cv_dayViewResource="@layout/popup_calendar_day_layout"
            app:cv_orientation="horizontal"
            app:cv_outDateStyle="endOfRow"
            android:clipToPadding="false"
            app:cv_inDateStyle="allMonths"
            app:cv_scrollMode="paged"/>

    </FrameLayout>

 <LinearLayout
     android:id="@+id/ll_bottom"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity=""
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     android:orientation="horizontal">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="right"
         tools:ignore="RtlHardcoded">

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:gravity="right"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp">

<!--             <TextView-->
<!--                 android:id="@+id/button_close"-->
<!--                 android:layout_width="wrap_content"-->
<!--                 android:layout_height="match_parent"-->
<!--                 android:layout_gravity="center_horizontal"-->
<!--                 android:fontFamily="@font/roboto_medium"-->
<!--                 android:foregroundGravity="center_horizontal"-->
<!--                 android:gravity="center_vertical"-->
<!--                 android:paddingLeft="20dp"-->
<!--                 android:paddingRight="20dp"-->
<!--                 android:text="@string/CANCEL"-->
<!--                 android:textAllCaps="true"-->

<!--                 android:textColor="@color/green_plantr"-->
<!--                 android:textSize="16sp" />-->
             <TextView
                 android:id="@+id/button_exit"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/roboto_bold"
                 android:foregroundGravity="center_horizontal"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:text="@string/tv_exit"
                 android:textAllCaps="true"
                 app:layout_constraintStart_toEndOf="@id/button_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textColor="@color/green_plantr"
                 android:textSize="17sp" />

             <TextView
                 android:id="@+id/button_validate"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="5dp"
                 android:foregroundGravity="center_horizontal"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:text="@string/tv_select"
                 android:textAllCaps="true"
                 android:fontFamily="@font/roboto_bold"
                 android:textSize="17sp"
                 android:textColor="@color/grey_plantr"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/button_cancel"
                 app:layout_constraintTop_toTopOf="parent" />

         </LinearLayout>

     </LinearLayout>

 </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>