<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:visibility="visible">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_button_cancel_change_pwd"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_popup_modal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/TITLE_CHANGE_PASSWORD"
            android:textColor="@color/black_plantr"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="left"
                android:text="@string/tv_reset_password"
                android:textColor="@color/dark_grey_plantr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popup_modal"
                android:textSize="17sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_first_password"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/email"
                    android:textColor="@color/dark_grey_plantr"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/ur_email"
                    android:background="@drawable/edit_text"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textEmailAddress"
                    android:padding="13dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/dark_grey_plantr"
                    android:textColorHint="@color/dark_grey_plantr"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_legend"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_medium"
                        android:foregroundGravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/CANCEL"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_grey_plantr"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/button_validate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:foregroundGravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:text="@string/CONFIRM_2"
                        android:textAllCaps="true"
                        android:textColor="@color/greenFonce_plantr"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/button_cancel"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>